--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -55,4 +55,4 @@ jobs:
     steps:
       - name: Deploy
         id: deployment
-        uses: actions/deploy-pages
+        uses: actions/deploy-pages@v4
